--- a/style.css
+++ b/style.css
@@ -3,3 +3,10 @@ body {
     color: #333333; /* Kolor napisu */
     font-family: Arial, sans-serif;
 }
+h1 {
+    background-color: blue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
